# PSD_VALDO

./: .buildinfo  Busines_Understanding (1).html  Busines_Understanding.html  BusinessUnderstanding_NO2.html  Data_Understanding_NO2.html  KNIME.html  Klasifikasi_dan_Bagging_Classifier.html  Modeling_NO2.html  Penyeimbang_Data (1).html  Penyeimbang_Data.html  Preprocessing_Data.html  Preprocessing_NO2.html  README.md  app.py  genindex.html  intro.html  knn_model_day4.pkl  knn_model_day5.pkl  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  scaler_day1.pkl  scaler_day3.pkl  scaler_day4.pkl  search.html  searchindex.js
_build/logs/: myst.build.json
_sources/: Busines_Understanding.ipynb  Klasifikasi_dan_Bagging_Classifier.ipynb  Penyeimbang_Data.ipynb
materi/: Data_Understanding_NO2.ipynb  Penyeimbang_Data (1).ipynb  Preprocessing_Data.ipynb  Preprocessing_NO2.ipynb  _config.yml  _toc.yml  data-understanding.ipynb  requirements.txt
materi/_build/.doctrees/: Busines_Understanding.doctree  BusinessUnderstanding_NO2.doctree  Data_Understanding_NO2.doctree  Klasifikasi_dan_Bagging_Classifier.doctree  Modeling_NO2.doctree  Penyeimbang_Data (1).doctree  Penyeimbang_Data.doctree  Preprocessing_Data.doctree  Preprocessing_NO2.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
materi/_build/html/: Busines_Understanding.html  BusinessUnderstanding_NO2.html  Data_Understanding_NO2.html  KNIME.html  Klasifikasi_dan_Bagging_Classifier.html  Modeling_NO2.html  Penyeimbang_Data (1).html  (+17 more)
(+14 files in other folders)
