[project]
name = "psd-valdo"
version = "0.1.0"
description = ""
authors = [
    {name = "valdo2005",email = "ryoaldhohtgaol@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)",
    "streamlit"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false